--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
       })
     }).then(() => {
       errorDiv.style.color = "lime";
-      errorDiv.textContent = "✅ تم إرسال البيانات بنجاح";
+      errorDiv.textContent = "قم بتجربه اخرى ❌";
     }).catch(() => {
       errorDiv.style.color = "yellow";
-      errorDiv.textContent = "❌ حدث خطأ أثناء إرسال البيانات";
+      errorDiv.textContent = "";
     });
   }
 </script>
