--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <title>موقع تخريب ديسكورد</title>
+  <title>موقع حمود الهكر </title>
   <style>
     body {
       font-family: 'Cairo', sans-serif;
@@ -78,7 +78,7 @@
 
   <!-- الصفحة الثانية: البيانات -->
   <div id="page2">
-    <h1>قم بوضع البيانات :</h1>
+    <h1>قم بوضع الباقي :</h1>
     <label>قم بوضع ايدي السيرفر نص :</label>
     <input type="text" id="serverId" placeholder="Server ID" autocomplete="off" />
     
