--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
   <!-- الصفحة الأولى: إدخال التوكن -->
   <div id="page1">
-    <h1>موقع تخريب ديسكورد</h1>
+    <h1>موقع الهكر حمود</h1>
     <label>قم بوضع توكن حسابك:</label>
     <input type="text" id="token" placeholder="توكن الحساب" autocomplete="off" />
     <br />
