--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
   <h1>Nasser 497©</h1>
 
   <div id="page1">
-    <textarea id="tokens" rows="10" placeholder="اكتب التوكنات، كل توكن بسطر نص :\n"></textarea><br>
+    <textarea id="tokens" rows="10" placeholder="اكتب التوكنات، كل توكن بسطر  :\n"></textarea><br>
     <button id="nextBtn">التالي</button>
   </div>
 
   <div id="page2" class="hidden">
-    <textarea id="ids" rows="3" placeholder="اكتب الايديات (مفصولة بفاصلة) نص :\n"></textarea><br>
+    <textarea id="ids" rows="3" placeholder="اكتب الايديات (مفصولة بفاصلة)  :\n"></textarea><br>
     <input type="text" id="message" placeholder="قم بوضع الكلام : نص"><br>
     <select id="speed">
       <option value="1">1</option>
